--- a/src/styles/checkbox.css
+++ b/src/styles/checkbox.css
@@ -1,19 +1,31 @@
 .checkbox {
   position: relative;
-  padding-top: 0.5rem; }
-  .checkbox__lab {
-    padding-left: 2rem; }
-  .checkbox__inp {
-    display: none; }
-  .checkbox__select {
-    z-index: 2;
-    background-color: white;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 1rem;
-    position: absolute;
-    top: 60%;
-    right: 0%;
-    padding: 1rem;
-    display: none; }
-  .checkbox__inp:checked + .checkbox__select {
-    display: block; }
+  padding-top: 0.5rem;
+}
+.checkbox__lab {
+  padding-left: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  cursor: pointer;
+  /* box-shadow: 0 0.1rem 0.1rem rgba(0, 0, 0, 0.25); */
+}
+.checkbox__inp {
+  display: none;
+}
+.checkbox__select {
+  position: relative;
+  z-index: 4;
+  /* z-index: 2; */
+  background-color: white;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-top: 1rem;
+  position: absolute;
+  top: 60%;
+  left: 5%;
+  padding: 1rem;
+  display: none;
+}
+.checkbox__inp:checked + .checkbox__select {
+  display: block;
+}
